--- a/src/pages/inspirations.astro
+++ b/src/pages/inspirations.astro
@@ -163,7 +163,7 @@ import SectionHero from '../components/SectionHero.astro';
   </p>
 
   <hr />
-  <p><em>Thanks to every creator who pushed me to quantify life itself.</em></p>
+  <p><em>Thanks to every creator who sparked the ideas for me to quantify life itself.</em></p>
 </Layout>
 
 <style>
