--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -51,7 +51,7 @@ import Layout from '../layouts/BlogPost.astro';
 
   <h2>🌱 Why This Blog Exists</h2>
   <p>
-    For the past 3 years, I've given impromptu demos of my systems to people. Publishing them here allows you to interact with these systems directly.
+    For the past 3 years, I've given impromptu demos of my systems to people. </strong>Publishing them here allows you to interact with these systems directly</strong>.
     If you’re curious about tracking your habits, streamlining research, or building your own life-OS, you’re in the right place.
   </p>
 
