--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -67,3 +67,15 @@ import Layout from '../layouts/BlogPost.astro';
   <br><br>
   📧 <strong>smartstuffstays@gmail.com</strong>
 </p>
+
+<style>
+  .about h2 {
+    text-align: center;
+    margin-top: 2.5rem;
+    margin-bottom: 1rem;
+  }
+</style>
+
+<div class="about">
+  <!-- all your content -->
+</div>
