--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/BlogPost.astro';
 <Layout
   title="About Me"
   description="Civil engineering PhD, systems builder, and data-driven life logger."
-  pubDate="2025-09-18"
+  pubDate="2025-10-14"
   heroImage="/images/about-lifeloggerz.png"
   wide
 >
@@ -74,6 +74,22 @@ import Layout from '../layouts/BlogPost.astro';
       text-align: center;
       margin-top: 2.5rem;
       margin-bottom: 1rem;
+    }
+
+    .centered-list {
+      list-style-position: inside;
+      text-align: center;
+      padding: 0;
+      margin: 1.5rem 0;
+    }
+
+    .centered-list li {
+      margin: 0.5rem 0;
+    }
+
+    .centered-email {
+      text-align: center;
+      line-height: 1.6;
     }
   </style>
 </Layout>
