--- a/src/pages/inspirations.astro
+++ b/src/pages/inspirations.astro
@@ -155,8 +155,11 @@ import SectionHero from '../components/SectionHero.astro';
   </p>
 
   <hr />
-  <p><em>Thanks to every creator who sparked the ideas for me to quantify life itself.</em></p>
+  <p class="centered-caption">
+    <em>Thanks to every creator who sparked the ideas for me to quantify life itself.</em>
+  </p>
 </Layout>
+
 
 <style>
   /* Center headings on this page */
